kubectl_deploy/dev/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "443"
      port: 443
      targetPort: 443
