kubectl_deploy/dev/svc-wordpress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - name: "9000"
      port: 9000
  selector:
    app: wordpress
    tier: frontend-c
